avoid overlapping buttons by the footer when the error message is big

--- a/app/styles/dashboard-style.css
+++ b/app/styles/dashboard-style.css
@@ -127,6 +127,7 @@
 .footer {
     position: fixed !important;
     z-index: 1000;
+    height:40px
 }
 
 .no-text-overflow {
